--- a/reachHigh-heb-app/package.json
+++ b/reachHigh-heb-app/package.json
@@ -14,6 +14,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "spinners-react": "^1.0.4",
     "typewriter-effect": "^2.17.0",
     "web-vitals": "^1.1.0"
   },
